--- a/core/templates/home/index.html
+++ b/core/templates/home/index.html
@@ -1,148 +1,57 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
-
-
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <!-- Favicon img -->
-    <link rel="shortcut icon" href="{% static "images/favicon.png" %}">
-    <!-- Bootstrap min css -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Mean menu css -->
-    <link rel="stylesheet" href="{% static 'css/meanmenu.css' %}">
-    <!-- All min css -->
-    <link rel="stylesheet" href="{% static 'css/all.min.css' %}">
-    <!-- Swiper bundle min css -->
-    <link rel="stylesheet" href="{% static 'css/swiper-bundle.min.css' %}">
-    <!-- Magnific popup css -->
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
-    <!-- Animate css -->
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-    <!-- Splitting css -->
-    <link rel="stylesheet" href="{% static 'css/splitting.css' %}">
-    <!-- Nice select css -->
-    <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
-    <!-- Style css -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-</head>
-
-<body>
-      
-    <!-- Header area start here -->
-    <header class="header-area border-none header-one-area">
-      <div class="container">
-        <div class="header__main header__main-one">
-          <a class="logo" href="/fa/index/">
-            <img id="site-logo" src="" alt="logo" style="max-height: 50px; height: auto; width: auto;">
-          </a>
-          <div class="main-menu">
-            <nav>
-              <ul>
-                <li><a href="/fa/index/"> صفحه اصلی</a></li>
-                <li>
-                  <a href="#">محصولات <i class="fa-solid fa-angle-down"></i></a>
-                  <ul class="sub-menu">
-                    {% for product in products %}
-                      <li>
-                        <a href="{% url 'product_detail' product.slug %}">
-                          {{ product.title }}
-                        </a>
-                      </li>
-                    {% empty %}
-                      <li><span>فعلاً محصولی وجود ندارد</span></li>
-                    {% endfor %}
-                  </ul>
-                </li>
-                <li><a href="/fa/blog/"></a>وبلاگ</li>
-                <li><a href="/fa/about/">درباره ما</a></li>
-              </ul>
-            </nav>
-          </div>
-    
-          <div class="menu-btns d-none d-lg-flex">
-            <a class='menu-btn-one' href='/fa/contact/'>تماس با ما</a>
-        </div>
-    
-          <button class="menubars d-block d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#menubar">
-            <span></span><span></span><span></span>
-          </button>
-        </div>
-      </div>
-    </header>
-        <!-- Header area end here -->
-
-  <!-- Sidebar area start here -->
-  <div class="sidebar-area offcanvas offcanvas-end" id="menubar">
-    <div class="offcanvas-header">
-      <a class="logo" href="/fa/index/">
-        <img src="{% static "images/logo/pst-1.png" %}" alt="logo">
-      </a>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas">
-        <i class="fa-regular fa-xmark"></i>
-      </button>
-    </div>
-    <div class="offcanvas-body sidebar__body">
-      <div class="mobile-menu overflow-hidden"></div>
-  
-      <div class="d-none d-lg-block">
-        <h5 class="text-white mb-20" data-i18n="nav.about"></h5>
-        <p class="paragraph-light fs-16"></p>
-      </div>
-      <div class="sidebar__btns my-4">
-        <a class='sign-in' href='/fa/contact/' data-i18n="nav.contact"></a>
-    </div>
-    </div>
-  </div>    <!-- Sidebar area end here -->
-  
-  
-    <div class="ScrollSmoother-content">
-
-
-        <main>
+{% block content %}
 
             <!-- Banner area start here -->
-            <section class="banner-area bg-image">
-                <div class="banner-logo-wrapper" style="
-                position: absolute;
-                top: 0; left: 0; right: 0; bottom: 0;
-                display: flex;
-                align-items: center;
-                justify-content: center;
+<section class="banner-area bg-image"
+         style="background-image: url('{% if banner.image %}{{ banner.image.url }}{% endif %}');">
+
+    <div class="banner-logo-wrapper"
+         style="position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+                display: flex; align-items: center; justify-content: center;
                 transform: translateX(-350px);">
-                
+        {% if banner.image %}
+            <img src="{{ banner.image.url }}" alt="{{ banner.banner_title }}">
+        {% endif %}
+    </div>
+
+    <div class="container">
+        <div class="banner__content pb-120">
+            <h5 class="splt-txt wow" data-splitting>
+                {{ banner.title }}
+            </h5>
+            <h1>
+                {{ banner.banner_title }}
+            </h1>
+            <p>
+                {{ banner.banner_description }}
+            </p>
+
+            <div class="d-flex align-items-center gap-3">
+                <a class="btn-one" href="{% url 'home:contact' %}">
+                    <span>
+                        <i class="fa-regular fa-arrow-up-left arry1"></i>
+                        <i class="fa-regular fa-arrow-up-left arry2"></i>
+                    </span>
+                </a>
+                <a class="btn-two" href="{% url 'home:about' %}">
+                    <span>
+                        <i class="fa-regular fa-arrow-left arry1"></i>
+                        <i class="fa-regular fa-arrow-left arry2"></i>
+                    </span>
+                </a>
             </div>
-                <div class="container">
-                    <div class="banner__content pb-120">
-                        <h5 class="splt-txt wow" data-splitting></h5>
-                        <h1></h1>
-                        <p></p>
-                        <div class="d-flex align-items-center gap-3">
-                            <a class='btn-one' href='/fa/contact/'>
-                                <span>
-                                    <i class="fa-regular fa-arrow-up-left arry1"></i>
-                                    <i class="fa-regular fa-arrow-up-left arry2"></i>
-                                </span>
-                            </a>
-                            <a class='btn-two' href='/fa/about/'>
-                                <span>
-                                    <i class="fa-regular fa-arrow-left arry1"></i>
-                                    <i class="fa-regular fa-arrow-left arry2"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="brand-area pb-120">
-                        <P class="mb-4">
-                        </P>
-                    </div>
-                </div>
-            </section>
+        </div>
+
+        <div class="brand-area pb-120">
+            <p class="mb-4">
+                {{ banner.content }}
+            </p>
+        </div>
+    </div>
+</section>
+
             <!-- Banner area end here -->
 
             <!-- Fanfact area start here -->
@@ -249,137 +158,4 @@
                 </div>
             </section>
             <!-- Blog area end here -->
-
-        </main>
-
-        <!-- Footer area start here -->
-        <footer class="footer-area secondary-bg pt-120">
-            <div class="container">
-                <div class="footer__wrp pb-60">
-                    <div class="footer__item footer-about">
-                        <p id="site-footer-text">
-                        </p>
-                        <a href="">
-                            <svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M11.6309 2.55094C10.3989 1.33583 8.75455 0.666626 7.00066 0.666626C5.24674 0.666626 3.60236 1.33583 2.37036 2.55094C0.0779159 4.812 -0.280968 7.52721 1.30371 10.621C2.6035 13.1587 4.94433 15.4671 6.65356 17.1527L6.72063 17.2189C6.79799 17.2951 6.89931 17.3333 7.00066 17.3333C7.10202 17.3333 7.20341 17.2951 7.2807 17.2189L7.3479 17.1526C9.05707 15.467 11.3979 13.1585 12.6976 10.6209C14.2823 7.52714 13.9234 4.812 11.6309 2.55094ZM11.9907 10.2687C10.8001 12.5932 8.64884 14.7628 7.00066 16.3902C5.35252 14.7628 3.20123 12.5931 2.01069 10.2688C0.577693 7.47102 0.878523 5.12721 2.93047 3.10338C4.05263 1.99661 5.52665 1.44319 7.00063 1.44319C8.47465 1.44319 9.94866 1.99657 11.0708 3.10338C13.1227 5.12717 13.4236 7.47099 11.9907 10.2687ZM7.00063 4.6314C5.39641 4.6314 4.09125 5.91871 4.09125 7.501C4.09125 9.08329 5.39641 10.3706 7.00063 10.3706C8.60488 10.3706 9.91005 9.08329 9.91005 7.501C9.91005 5.91871 8.60491 4.6314 7.00063 4.6314ZM7.00063 9.58935C5.83315 9.58935 4.88334 8.65253 4.88334 7.501C4.88334 6.34947 5.83315 5.41265 7.00063 5.41265C8.16814 5.41265 9.11796 6.34947 9.11796 7.501C9.11796 8.65253 8.16814 9.58935 7.00063 9.58935Z"
-                                    fill="white" fill-opacity="0.7" />
-                            </svg>
-                            <p  id="site-address"></p>
-                            </a>
-                            <div class="social-icons mt-20">
-                              <a id="site-linkedin" href="">
-                                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                      xmlns="http://www.w3.org/2000/svg">
-                                      <path
-                                          d="M23.9982 23.9997V15.2098C23.9982 10.8898 23.0682 7.58984 18.0282 7.58984C15.5982 7.58984 13.9782 8.90983 13.3182 10.1698H13.2582V7.97984H8.48828V23.9997H13.4682V16.0498C13.4682 13.9498 13.8582 11.9398 16.4382 11.9398C18.9882 11.9398 19.0182 14.3098 19.0182 16.1698V23.9697H23.9982V23.9997Z"
-                                          fill="white" />
-                                      <path d="M0.390625 7.97949H5.37059V23.9994H0.390625V7.97949Z" fill="white" />
-                                      <path
-                                          d="M2.87998 0C1.28999 0 0 1.28999 0 2.87998C0 4.46997 1.28999 5.78996 2.87998 5.78996C4.46997 5.78996 5.75996 4.46997 5.75996 2.87998C5.75996 1.28999 4.46997 0 2.87998 0Z"
-                                          fill="white" />
-                                  </svg>
-                              </a>
-                              
-                              <a id="site-telegram" href="">
-                                  <svg width="24" height="20" viewBox="0 0 24 20" fill="none"
-                                      xmlns="http://www.w3.org/2000/svg">
-                                      <path
-                                          d="M9.41718 13.1809L9.02018 18.7649C9.58818 18.7649 9.83418 18.5209 10.1292 18.2279L12.7922 15.6829L18.3102 19.7239C19.3222 20.2879 20.0352 19.9909 20.3082 18.7929L23.9302 1.82092L23.9312 1.81992C24.2522 0.323917 23.3902 -0.261083 22.4042 0.105917L1.11418 8.25692C-0.338822 8.82092 -0.316822 9.63092 0.867178 9.99792L6.31018 11.6909L18.9532 3.77992C19.5482 3.38592 20.0892 3.60392 19.6442 3.99792L9.41718 13.1809Z"
-                                          fill="white" />
-                                  </svg>
-                              </a>
-                              <a id="site-instagram" href="" target="_blank" aria-label="Instagram">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
-                                  <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.35 3.608 1.325.975.975 1.263 2.242 1.325 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.35 2.633-1.325 3.608-.975.975-2.242 1.263-3.608 1.325-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.35-3.608-1.325-.975-.975-1.263-2.242-1.325-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.35-2.633 1.325-3.608.975-.975 2.242-1.263 3.608-1.325C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.77.131 4.575.466 3.635 1.406 2.695 2.346 2.36 3.541 2.301 4.823.013 8.332 0 8.741 0 12c0 3.259.013 3.668.072 4.948.059 1.282.394 2.477 1.334 3.417.94.94 2.135 1.275 3.417 1.334C8.332 23.987 8.741 24 12 24c3.259 0 3.668-.013 4.948-.072 1.282-.059 2.477-.394 3.417-1.334.94-.94 1.275-2.135 1.334-3.417C23.987 15.668 24 15.259 24 12c0-3.259-.013-3.668-.072-4.948-.059-1.282-.394-2.477-1.334-3.417-.94-.94-2.135-1.275-3.417-1.334C15.668.013 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.881 0 1.44 1.44 0 012.881 0z"/>
-                                </svg>
-                              </a>
-                          </div>   
-                        
-                    </div>
-                    <div class="footer__item">
-                        <strong data-i18n="nav.company"></strong>
-                        <ul>
-                            <li>
-                                <a href='/fa/about/' data-i18n="nav.about"></a>
-                            </li>
-                            <li>
-                                <a href='/fa/product/' data-i18n="nav.product"></a>
-                            </li>
-                            <li>
-                                <a href='/fa/blog/' data-i18n="nav.blog"></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer__item">
-                      <strong data-i18n="nav.links"></strong>
-                      <ul>
-                        <li>
-                          <a id="link_address_one" href="" target="_blank">
-                            <p id="link_title_one"></p>
-                          </a>
-                        </li>
-                        <li>
-                          <a id="link_address_two" href="" target="_blank">
-                            <p id="link_title_two"></p>
-                          </a>
-                        </li>
-                      </ul>
-                  </div>
-                    <div class="footer__item footer-subscribe">
-                        <strong></strong>
-                        <p id="site-email"></p>
-                        <p id="site-mobile"></p>
-                        <p id="site-telephone"></p>
-                    </div>
-                </div>
-                <div class="footer__copyright">
-                    <p data-i18n="footer.copy"></p>
-
-                    
-                </div>
-            </div>
-        </footer>
-        <!-- Footer area end here -->
-
-
-    </div>
-
-    <!-- Back to top btn area start here -->
-    <!-- <button id="back-top" class="btn-backToTop">
-        <i class="fa-solid fa-chevron-up"></i>
-    </button> -->
-    <!-- Back to top btn area end here -->
-
-    <!-- Jquery 3.7.0 Min Js -->
-    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-    <!-- Bootstrap min Js -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- Mean menu Js -->
-    <script src="{% static 'js/meanmenu.js' %}"></script>
-    <!-- Swiper bundle min Js -->
-    <script src="{% static 'js/swiper-bundle.min.js' %}"></script>
-    <!-- Counterup min Js -->
-    <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
-    <!-- Wow min Js -->
-    <script src="{% static 'js/wow.min.js' %}"></script>
-    <!-- Magnific popup min Js -->
-    <script src="{% static 'js/magnific-popup.min.js' %}"></script>
-    <!-- Nice select min Js -->
-    <script src="{% static 'js/nice-select.min.js' %}"></script>
-    <!-- Isotope pkgd min Js -->
-    <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
-    <!-- Splitting Js -->
-    <script src="{% static 'js/splitting.js' %}"></script>
-    <!-- Waypoints Js -->
-    <script src="{% static 'js/jquery.waypoints.js' %}"></script>
-    <!-- Gsap -->
-    <script src="{% static 'js/gsap/gsap.min.js' %}"></script>
-    <script src="{% static 'js/gsap/ScrollTrigger.min.js' %}"></script>
-    <script src="{% static 'js/gsap/ScrollSmoother.min.js' %}"></script>
-    <!-- Script Js -->
-    <script src="{% static 'js/script.js' %}"></script>
-</body>
-
-
-</html>
+{% endblock %}
