--- a/templates/base.html
+++ b/templates/base.html
@@ -38,13 +38,17 @@
     <header class="header-area border-none header-one-area">
       <div class="container">
         <div class="header__main header__main-one">
-          <a class="logo" href="/fa/index/">
-            <img id="site-logo" src="" alt="logo" style="max-height: 50px; height: auto; width: auto;">
+
+          <a class="logo" href="{% url 'home:home' %}">
+                      {% if setting.logo %}
+            <img src="{{ setting.logo.url }}" alt="logo" style="max-height: 50px; height: auto; width: auto;">
+                            {% endif %}
           </a>
+
           <div class="main-menu">
             <nav>
               <ul>
-                <li><a href="/fa/index/"> صفحه اصلی</a></li>
+                <li><a href="{% url 'home:home' %}"> صفحه اصلی</a></li>
                 <li>
                   <a href="#">محصولات <i class="fa-solid fa-angle-down"></i></a>
                   <ul class="sub-menu">
@@ -59,20 +63,21 @@
                     {% endfor %}
                   </ul>
                 </li>
-                <li><a href="/fa/blog/">وبلاگ</a></li>
-                <li><a href="/fa/about/">درباره ما</a></li>
+                <li><a href="{% url 'blog:blog' %}">وبلاگ</a></li>
+                <li><a href="{% url 'home:about' %}">درباره ما</a></li>
               </ul>
             </nav>
           </div>
 
           <div class="menu-btns d-none d-lg-flex">
-            <a class='menu-btn-one' href='/fa/contact/'>تماس با ما</a>
+            <a class='menu-btn-one' href='{% url 'home:contact' %}'>تماس با ما</a>
         </div>
 
           <button class="menubars d-block d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#menubar">
             <span></span><span></span><span></span>
           </button>
         </div>
+
       </div>
     </header>
         <!-- Header area end here -->
@@ -80,7 +85,7 @@
   <!-- Sidebar area start here -->
   <div class="sidebar-area offcanvas offcanvas-end" id="menubar">
     <div class="offcanvas-header">
-      <a class="logo" href="/fa/index/">
+      <a class="logo" href="{% url 'home:home' %}">
         <img src="{% static "images/logo/pst-1.png" %}" alt="logo">
       </a>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas">
@@ -95,7 +100,7 @@
         <p class="paragraph-light fs-16"></p>
       </div>
       <div class="sidebar__btns my-4">
-        <a class='sign-in' href='/fa/contact/'>تماس با ما</a>
+        <a class='sign-in' href='{% url 'home:contact' %}'>تماس با ما</a>
     </div>
     </div>
   </div>    <!-- Sidebar area end here -->
@@ -121,18 +126,21 @@
             <div class="container">
                 <div class="footer__wrp pb-60">
                     <div class="footer__item footer-about">
-                        <p id="site-footer-text">
+                        {% if setting.footer_text %}
+                        <p>{{ setting.footer_text }}
                         </p>
+                        {% endif %}
                         <a href="">
                             <svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M11.6309 2.55094C10.3989 1.33583 8.75455 0.666626 7.00066 0.666626C5.24674 0.666626 3.60236 1.33583 2.37036 2.55094C0.0779159 4.812 -0.280968 7.52721 1.30371 10.621C2.6035 13.1587 4.94433 15.4671 6.65356 17.1527L6.72063 17.2189C6.79799 17.2951 6.89931 17.3333 7.00066 17.3333C7.10202 17.3333 7.20341 17.2951 7.2807 17.2189L7.3479 17.1526C9.05707 15.467 11.3979 13.1585 12.6976 10.6209C14.2823 7.52714 13.9234 4.812 11.6309 2.55094ZM11.9907 10.2687C10.8001 12.5932 8.64884 14.7628 7.00066 16.3902C5.35252 14.7628 3.20123 12.5931 2.01069 10.2688C0.577693 7.47102 0.878523 5.12721 2.93047 3.10338C4.05263 1.99661 5.52665 1.44319 7.00063 1.44319C8.47465 1.44319 9.94866 1.99657 11.0708 3.10338C13.1227 5.12717 13.4236 7.47099 11.9907 10.2687ZM7.00063 4.6314C5.39641 4.6314 4.09125 5.91871 4.09125 7.501C4.09125 9.08329 5.39641 10.3706 7.00063 10.3706C8.60488 10.3706 9.91005 9.08329 9.91005 7.501C9.91005 5.91871 8.60491 4.6314 7.00063 4.6314ZM7.00063 9.58935C5.83315 9.58935 4.88334 8.65253 4.88334 7.501C4.88334 6.34947 5.83315 5.41265 7.00063 5.41265C8.16814 5.41265 9.11796 6.34947 9.11796 7.501C9.11796 8.65253 8.16814 9.58935 7.00063 9.58935Z"
-                                    fill="white" fill-opacity="0.7" />
+                                <path d="M11.6309 2.55094C10.3989 1.33583 8.75455 0.666626 7.00066 0.666626C5.24674 0.666626 3.60236 1.33583 2.37036 2.55094C0.0779159 4.812 -0.280968 7.52721 1.30371 10.621C2.6035 13.1587 4.94433 15.4671 6.65356 17.1527L6.72063 17.2189C6.79799 17.2951 6.89931 17.3333 7.00066 17.3333C7.10202 17.3333 7.20341 17.2951 7.2807 17.2189L7.3479 17.1526C9.05707 15.467 11.3979 13.1585 12.6976 10.6209C14.2823 7.52714 13.9234 4.812 11.6309 2.55094ZM11.9907 10.2687C10.8001 12.5932 8.64884 14.7628 7.00066 16.3902C5.35252 14.7628 3.20123 12.5931 2.01069 10.2688C0.577693 7.47102 0.878523 5.12721 2.93047 3.10338C4.05263 1.99661 5.52665 1.44319 7.00063 1.44319C8.47465 1.44319 9.94866 1.99657 11.0708 3.10338C13.1227 5.12717 13.4236 7.47099 11.9907 10.2687ZM7.00063 4.6314C5.39641 4.6314 4.09125 5.91871 4.09125 7.501C4.09125 9.08329 5.39641 10.3706 7.00063 10.3706C8.60488 10.3706 9.91005 9.08329 9.91005 7.501C9.91005 5.91871 8.60491 4.6314 7.00063 4.6314ZM7.00063 9.58935C5.83315 9.58935 4.88334 8.65253 4.88334 7.501C4.88334 6.34947 5.83315 5.41265 7.00063 5.41265C8.16814 5.41265 9.11796 6.34947 9.11796 7.501C9.11796 8.65253 8.16814 9.58935 7.00063 9.58935Z"
+                                    fill="white" fill-opacity="0.7"/>
                             </svg>
-                            <p  id="site-address"></p>
+                            {% if setting.address %}
+                            <p>{{ setting.address }}</p>
+                            {% endif %}
                             </a>
                             <div class="social-icons mt-20">
-                              <a id="site-linkedin" href="">
+                              <a href="{{ setting.linkedin }}">
                                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                       xmlns="http://www.w3.org/2000/svg">
                                       <path
@@ -145,7 +153,7 @@
                                   </svg>
                               </a>
 
-                              <a id="site-telegram" href="">
+                              <a href="{{ setting.telegram }}">
                                   <svg width="24" height="20" viewBox="0 0 24 20" fill="none"
                                       xmlns="http://www.w3.org/2000/svg">
                                       <path
@@ -153,7 +161,7 @@
                                           fill="white" />
                                   </svg>
                               </a>
-                              <a id="site-instagram" href="" target="_blank" aria-label="Instagram">
+                              <a href="{{ setting.instagram }}" target="_blank" aria-label="Instagram">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
                                   <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.35 3.608 1.325.975.975 1.263 2.242 1.325 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.35 2.633-1.325 3.608-.975.975-2.242 1.263-3.608 1.325-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.35-3.608-1.325-.975-.975-1.263-2.242-1.325-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.35-2.633 1.325-3.608.975-.975 2.242-1.263 3.608-1.325C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.77.131 4.575.466 3.635 1.406 2.695 2.346 2.36 3.541 2.301 4.823.013 8.332 0 8.741 0 12c0 3.259.013 3.668.072 4.948.059 1.282.394 2.477 1.334 3.417.94.94 2.135 1.275 3.417 1.334C8.332 23.987 8.741 24 12 24c3.259 0 3.668-.013 4.948-.072 1.282-.059 2.477-.394 3.417-1.334.94-.94 1.275-2.135 1.334-3.417C23.987 15.668 24 15.259 24 12c0-3.259-.013-3.668-.072-4.948-.059-1.282-.394-2.477-1.334-3.417-.94-.94-2.135-1.275-3.417-1.334C15.668.013 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zm0 10.162a3.999 3.999 0 110-7.998 3.999 3.999 0 010 7.998zm6.406-11.845a1.44 1.44 0 11-2.881 0 1.44 1.44 0 012.881 0z"/>
                                 </svg>
@@ -162,43 +170,40 @@
 
                     </div>
                     <div class="footer__item">
-                        <strong data-i18n="nav.company"></strong>
+                        <strong>شرکت</strong>
                         <ul>
                             <li>
-                                <a href='/fa/about/' data-i18n="nav.about"></a>
+                                <a href='{% url 'home:about' %}'>درباره ما</a>
                             </li>
                             <li>
-                                <a href='/fa/product/' data-i18n="nav.product"></a>
-                            </li>
-                            <li>
-                                <a href='/fa/blog/' data-i18n="nav.blog"></a>
+                                <a href='{% url 'blog:blog' %}'>وبلاگ</a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer__item">
-                      <strong data-i18n="nav.links"></strong>
+                      <strong>پیوندها</strong>
                       <ul>
                         <li>
-                          <a id="link_address_one" href="" target="_blank">
-                            <p id="link_title_one"></p>
+                          <a id="link_address_one" href="{{ setting.link_address_one }}" target="_blank">
+                            <p>{{ setting.link_title_one }}</p>
                           </a>
                         </li>
                         <li>
-                          <a id="link_address_two" href="" target="_blank">
-                            <p id="link_title_two"></p>
+                          <a href="{{ setting.link_address_two }}" target="_blank">
+                            <p>{{ setting.link_title_two }}</p>
                           </a>
                         </li>
                       </ul>
                   </div>
                     <div class="footer__item footer-subscribe">
                         <strong></strong>
-                        <p id="site-email"></p>
-                        <p id="site-mobile"></p>
-                        <p id="site-telephone"></p>
+                        <p>{{ setting.email }}</p>
+                        <p>{{ setting.mobile_number }}</p>
+                        <p>{{ setting.telephone }}</p>
                     </div>
                 </div>
                 <div class="footer__copyright">
-                    <p data-i18n="footer.copy"></p>
+                    <p>تمام حقوق مربوط به کپی رایت برای پترو صنعت تاراز محفوظ می باشد.</p>
 
 
                 </div>
