Fix a bug in ckeditor show contents

--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -25,7 +25,7 @@
                                     </div>
                                     <h1 class="mb-1">{{ article.title }}
                                     </h1>
-                                    <p class="mb-10">{{ article.content }}</p>
+                                    <p class="mb-10">{{ article.content|safe }}</p>
                                     <p class="mb-10">{{ article.author }}</p>
                                     <h3 class="fw-300 mb-10"></h3>
                                 </div>
