--- a/product/templates/product-details.html
+++ b/product/templates/product-details.html
@@ -26,7 +26,7 @@
                             <div class="case-details__wrp">
                               <br />
                               <h3>{{ product.title }}</h3>
-                              <p>{{ product.description }}</p>
+                              <p>{{ product.description|safe }}</p>
                             </div>
                           </div>
                         </section>
