--- a/product/templates/product-type.html
+++ b/product/templates/product-type.html
@@ -25,7 +25,7 @@
                     <div class="case-details__wrp" style="padding: 70px 0;">
 
                         <h1>{{ type.title }}</h1>
-                        <p>{{ type.description }}</p>
+                        <p>{{ type.description|safe }}</p>
 
                         <div class="case-details__image-sm mt-30">
                             {% for img in type.gallery.all %}
