--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ article.meta_title }}{% endblock %}
+{% block meta_description %}{{ article.meta_description }}{% endblock %}
+{% block canonical %}
+  <link rel="canonical" href="{{ canonical_url }}">
+{% endblock %}
+
 {% load static %}
 
 {% block content %}
