--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+      <title>{% block meta_title %}{{ default_meta_title|default:"Petro Sanat Taraz" }}{% endblock %}</title>
+      <meta name="description" content="{% block meta_description %}{{ default_meta_description|default:"توضیحات سایت" }}{% endblock %}">
+
+      {% block canonical %}
+        {% if canonical_url %}
+          <link rel="canonical" href="{{ canonical_url }}">
+        {% else %}
+          <link rel="canonical" href="{{ request.build_absolute_uri }}">
+        {% endif %}
+      {% endblock %}
     <!-- Favicon img -->
     <link rel="shortcut icon" href="{% static "images/favicon.png" %}">
     <!-- Bootstrap min css -->
