--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ blog_info.meta_title }}{% endblock %}
+{% block meta_description %}{{ blog_info.meta_description }}{% endblock %}
+
 {% load static %}
 
 {% block content %}
