Add metatitle,metadescription and canonical url to produt and product type

--- a/product/templates/product-type.html
+++ b/product/templates/product-type.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ type.meta_title }}{% endblock %}
+{% block meta_description %}{{ type.meta_description }}{% endblock %}
+{% block canonical %}
+  <link rel="canonical" href="{{ canonical_url }}">
+{% endblock %}
+
 {% load static %}
 
 {% block content %}
