--- a/product/templates/product-details.html
+++ b/product/templates/product-details.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ product.meta_title }}{% endblock %}
+{% block meta_description %}{{ product.meta_description }}{% endblock %}
+{% block canonical %}
+  <link rel="canonical" href="{{ canonical_url }}">
+{% endblock %}
+
 {% load static %}
 
 {% block content %}
