Add metatitle,metadescription and canonical url to core pages

--- a/core/templates/contact/contact.html
+++ b/core/templates/contact/contact.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ contact_us.meta_title }}{% endblock %}
+{% block meta_description %}{{ contact_us.meta_description }}{% endblock %}
+
 {% load static %}
 
 {% block content %}
