--- a/core/templates/about/about.html
+++ b/core/templates/about/about.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ about_us.meta_title }}{% endblock %}
+{% block meta_description %}{{ about_us.meta_description }}{% endblock %}
+
 {% load static %}
 
 {% block content %}
