--- a/core/templates/home/index.html
+++ b/core/templates/home/index.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+
+{% block meta_title %}{{ banner.meta_title }}{% endblock %}
+{% block meta_description %}{{ banner.meta_description }}{% endblock %}
+
 {% load static %}
 
 {% block content %}
