--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,7 @@
                     {% endfor %}
                   </ul>
                 </li>
+              <li><a href="{% url 'project:project' %}">پروژه ها</a></li>
                 <li><a href="{% url 'blog:blog' %}">وبلاگ</a></li>
                 <li><a href="{% url 'home:about' %}">درباره ما</a></li>
               </ul>
